# factor_lib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/: debug_row_1.html
data/projects_20260518_121517/: errors_report.json  project_12.json  project_120.json  project_146.json  project_173.json  project_175.json  project_178.json  project_185.json  project_195.json  project_197.json  project_205.json  project_212.json  project_213.json  project_219.json  project_225.json  project_226.json  project_227.json  project_229.json  project_231.json  project_238.json  project_239.json  project_24.json  project_240.json  project_245.json  project_246.json  project_247.json  project_250.json  project_253.json  project_254.json  project_256.json  project_257.json  project_258.json  project_259.json  project_261.json  project_268.json  project_272.json  project_273.json  project_278.json  project_281.json  project_282.json  (+71 more)
data/projects_20260518_141026/: errors_report.json  project_12.json  project_120.json  project_146.json  project_173.json  project_175.json  project_178.json  project_185.json  project_195.json  project_197.json  project_205.json  project_212.json  project_24.json  (+98 more)
docs/: architecture.md  backlog.md  epics-and-user-stories.md
scripts/: debug_csv_button.py  debug_project.py  test_scraper.py
tests/: conftest.py
(+91 files in other folders)
