[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-lib"
version = "0.1.0"
description = "Playwright-based scraper and CSV exporter for the Facto transparency portal"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-playwright>=0.4",
    "mypy>=1.7",
    "ruff>=0.1.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
